--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .bgstyle {
   /* background: linear-gradient(136deg, #1ad7c0, #8E44AD, #ff9b11, #1F3A93, #ddd8c6, #000000, #000000);  */
-  background: linear-gradient(
+  /* background: linear-gradient(
     136deg,
     #4484ce,
     #1ad7c0,
@@ -8,15 +8,16 @@
     #9b59b6,
     #ff7f7f,
     #ecf0f1
-  );
+  ); */
 
   background-size: 1200% 1200%;
-  -webkit-animation: AnimationName 70s ease infinite;
+  /* -webkit-animation: AnimationName 70s ease infinite;
   -moz-animation: AnimationName 70s ease infinite;
   -o-animation: AnimationName 70s ease infinite;
-  animation: AnimationName 70s ease infinite;
+  animation: AnimationName 70s ease infinite; */
   height: 100%;
-}
+  background-image: url('./components/resources/homeBackground.jpg') no-repeat bottom left;
+};
 
 @-webkit-keyframes AnimationName {
   0% {
