--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,9 @@
   -o-animation: AnimationName 70s ease infinite;
   animation: AnimationName 70s ease infinite; */
   height: 100%;
-  background-image: url('./components/resources/homeBackground.jpg') no-repeat bottom left;
+  background-image: url('components/resources/homeBackground.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
 };
 
 @-webkit-keyframes AnimationName {
